# BibleSpotlight

./: Cargo.toml
src/: interpreter.rs  main.rs  mybible.rs
