[package]
name = "bible-spotlight"
version = "0.1.0"
authors = ["Adriel <sandadriel@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
regex = "1.10.2"
roxmltree = "0.19.0"
rusqlite = "0.30.0"
